# easy-dlp

./: .gitignore  Add easy-dlp to Desktop.command  Open easy-dlp.bat  Open easy-dlp.command  README.md  build.sh  cookies.txt.example  main.py  pom.xml  pyproject.toml  requirements.txt  run.sh
easy-dlp.app/Contents/: Info.plist
easy-dlp.app/Contents/MacOS/: easy-dlp
easy-dlp.app/Contents/Resources/: AppIcon.icns
scripts/: check_playlist_matches.py
src/main/java/: module-info.java
src/main/java/com/example/ytdlp/: DownloadMusicAndThumbnails.py  DownloadVideos.py  Functions.java  data.json
ytdlp_app/: __init__.py  __main__.py  apple_music.py  downloader.py  embed.py  gui.py  jobs.py  match_config.py  music_duplicates.py  music_postprocess.py  rate_limit.py  runtime.py  search.py  settings.py  thumbcache.py
ytdlp_app/metadata/: __init__.py  itunes.py  lyrics.py  parse.py  tagger.py
ytdlp_app/sources/: __init__.py  base.py  spotify.py  youtube.py
