[project]
name = "ytdlp-app"
version = "2.0.0"
description = "Simple desktop GUI for yt-dlp: download audio/video/thumbnails from YouTube and embed thumbnails into existing audio files."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alex Lee" }]
dependencies = [
    "yt-dlp>=2026.3.17",
    "customtkinter>=5.2.2",
]

[project.scripts]
ytdlp-app = "ytdlp_app.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ytdlp_app*"]
