[project]
name = "easy-dlp"
version = "2.1.0"
description = "easy-dlp — a polished desktop GUI for yt-dlp: search, download, and tag YouTube audio, video, and thumbnails."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alex Lee" }]
dependencies = [
    "yt-dlp>=2026.3.17",
    "customtkinter>=5.2.2",
    "Pillow>=10.0.0",
    "mutagen>=1.47.0",
]

[project.scripts]
easy-dlp = "ytdlp_app.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ytdlp_app*"]
